--- a/fotok.css
+++ b/fotok.css
@@ -1,6 +1,6 @@
 .container{
 max-width: 1400px;
-border: 1px solid gray;
+border: 1px solid rgb(194, 22, 22);
 /*margin: 0 auto;*/
 display: flex;
 flex-wrap: wrap;
